[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pointers/PointerP1.gd" type="Script" id=1]
[ext_resource path="res://Pointers/p1cursor.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.3588, 92.1138 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5, 24 )

[node name="PointerP1" type="Node2D"]
script = ExtResource( 1 )

[node name="SpriteP1" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="GrabAreaP1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabAreaP1"]
position = Vector2( 6.2251, -0.0907288 )
rotation = 0.331613
shape = SubResource( 1 )

[node name="PointerArea" type="Area2D" parent="."]

[node name="PointerCollision" type="CollisionShape2D" parent="PointerArea"]
position = Vector2( -0.5, 64 )
shape = SubResource( 2 )

[connection signal="texture_changed" from="SpriteP1" to="." method="_on_Sprite_texture_changed"]
[connection signal="input_event" from="GrabAreaP1" to="." method="_on_GrabAreaP1_input_event"]
